Fix text sizing on mobile

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -112,7 +112,15 @@ footer a {
 }
 
 @media screen and (max-width: 700px) {
-  #outcome {
-    font-size: 20px;
+  h1 {
+    font-size: 60px;
+    margin-bottom: 20px;
+  }
+  #answer {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+  #description {
+    font-size: 50px;
   }
 }
